hide loader if noscript

--- a/template.html
+++ b/template.html
@@ -28,6 +28,10 @@
           left: 33%;
           font-family: Helvetica;
         }
+
+        .loader {
+          display: none;
+        }
       </style>
     </noscript>
   </head>
