--- a/template.html
+++ b/template.html
@@ -23,18 +23,18 @@
     <noscript>
       <style>
         noscript {
-          .center {
-            position: absolute;
-            width: 100px;
-            height: 50px;
-            top: 50%;
-            left: 50%;
-            margin-left: -50px;
-            margin-top: -25px;
-          }
-
           width: 100%;
           height: 100%;
+        }
+
+        noscript .center {
+          position: absolute;
+          width: 100px;
+          height: 50px;
+          top: 50%;
+          left: 50%;
+          margin-left: -50px;
+          margin-top: -25px;
         }
 
         .loader {
