--- a/template.html
+++ b/template.html
@@ -24,17 +24,15 @@
       <style>
         noscript {
           width: 100%;
-          height: 100%;
+          height: 300px;
         }
 
         noscript .center {
-          position: absolute;
-          width: 100px;
-          height: 50px;
-          top: 50%;
-          left: 50%;
-          margin-left: -50px;
-          margin-top: -25px;
+          text-align: center;
+          vertical-align: middle;
+          line-height: 300px;       /* the same as your div height */
+          font-family: Helvetica;
+          font-size: 13px;
         }
 
         .loader {
